--- a/bicara-typescript-master/.vscode/settings.json
+++ b/bicara-typescript-master/.vscode/settings.json
@@ -3,5 +3,9 @@
   "editor.formatOnSave": true,
   "javascript.validate.enable": false,
   "typescript.quickSuggestionsForPaths": false,
-  "path-intellisense.absolutePathToWorkspace": false
+  "path-intellisense.absolutePathToWorkspace": false,
+  "window.zoomLevel": 0.5,
+    "terminal.integrated.fontSize": 18,
+    "workbench.colorTheme": "Noctis Minimus",
+    "workbench.iconTheme": "vscode-icons",
 }
